Fri Sep 29 00:17:17 2000  George Lebl <jirka@5z.com>

	* panel_config.c: fix crash during properties by nulling the
	  PerPanelConfig structure properly.

Thu Sep 28 22:04:34 2000  George Lebl <jirka@5z.com>

	* drawer.[ch], panel_config.[ch], gnome-panel-properties.c,
	  panel-util.[ch]:  More GnomePropertyBox code killing.  This makes
	  the drawer properties actually work.

	* menu-fentry.[ch], menu.c:  Fix adding drawers from menus with
	  merging on.  And other various cleanups.

Thu Sep 28 19:50:25 2000  George Lebl <jirka@5z.com>

	* applet-widget.c: cleaner checking for if a child was added,
	  to know when to call abort load, and some other minor cleanups

	* applet.c, launcher.[ch], session.[ch]: store launchers in better
	  paths, and keep the filename constant.  Also allows us to save a
	  .desktop file without having to save the entire session.  This
	  reduces the need for temporary file mess and reduces races.  The
	  downside is no code for per-session panel config, but that's
	  mostly broken anyway

	* applet.[ch], launcher.c, drawer.c, logout.c, menu.c, gnome-run.c,
	  status.c, swallow.c:  Add a destroy notify to the AppletInfo.
	  use it to destroy the per applet structures.
	  
Thu Sep 28 01:01:41 2000  George Lebl <jirka@5z.com>

	* panel_config.[ch], drawer.c, launcher.[ch]: Make, property
	  dialogs (the panel one and launcher one only for now) not modal
	  and make them have immediate effect.  This is the way nautilus
	  and actually most of the new apps work.

	* launcher.[ch], session.[ch]: only schedule syncs, never force
	  them.  This way syncs from launchers won't come closer together
	  then 30 seconds.  Deal with the drag case where the launcher wasn't
	  saved yet.

Wed Sep 27 22:34:21 2000  George Lebl <jirka@5z.com>

	* foobar-widget.c: make a bunch of code #if 0'ed out as it's not
	  currently used pending some dumping action

	* tasklist_icon.[ch]: added a header and #if 0'ed out an unused
	  function
